chore(style): implement automated style checks and Git hooks
- Add spotless-maven-plugin and maven-checkstyle-plugin to Java project
- Configure ESLint and Prettier for Node.js project (ganglia-webui)
- Create scripts/check-style.sh for unified style checking
- Setup .githooks/pre-commit to enforce style on commit
- Add project-setup.sh for easy Git hooks configuration
- Reformat existing Java codebase to follow Google Java Format