@@ -1,76 +1,90 @@
 package work.ganglia.it;
 
-import io.vertx.core.Future;
-import io.vertx.core.Vertx;
-import io.vertx.core.json.JsonObject;
-import io.vertx.junit5.VertxExtension;
-import io.vertx.junit5.VertxTestContext;
-import work.ganglia.Ganglia;
-import work.ganglia.BootstrapOptions;
-import work.ganglia.coding.CodingAgentBuilder;
-import work.ganglia.port.external.llm.ChatRequest;
-import work.ganglia.port.external.llm.ModelGateway;
-import work.ganglia.port.external.llm.ModelResponse;
-import work.ganglia.port.chat.SessionContext;
-import work.ganglia.port.internal.state.TokenUsage;
-import work.ganglia.port.external.tool.ToolCall;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.api.io.TempDir;
-
-import java.nio.file.Path;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import io.vertx.core.Future;
+import io.vertx.core.Vertx;
+import io.vertx.core.json.JsonObject;
+import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
+import java.nio.file.Path;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.io.TempDir;
+import work.ganglia.BootstrapOptions;
+import work.ganglia.Ganglia;
+import work.ganglia.coding.CodingAgentBuilder;
+import work.ganglia.port.chat.SessionContext;
+import work.ganglia.port.external.llm.ChatRequest;
+import work.ganglia.port.external.llm.ModelGateway;
+import work.ganglia.port.external.llm.ModelResponse;
+import work.ganglia.port.external.tool.ToolCall;
+import work.ganglia.port.internal.state.TokenUsage;
+
 @ExtendWith(VertxExtension.class)
 public class FullWorkflowIT {
 
-    private Ganglia ganglia;
-    private ModelGateway mockModel;
+  private Ganglia ganglia;
+  private ModelGateway mockModel;
 
-    @BeforeEach
-    void setUp(Vertx vertx, VertxTestContext testContext, @TempDir Path tempDir) {
-        mockModel = mock(ModelGateway.class);
-        when(mockModel.chat(any(ChatRequest.class))).thenReturn(Future.failedFuture("Reflection disabled"));
+  @BeforeEach
+  void setUp(Vertx vertx, VertxTestContext testContext, @TempDir Path tempDir) {
+    mockModel = mock(ModelGateway.class);
+    when(mockModel.chat(any(ChatRequest.class)))
+        .thenReturn(Future.failedFuture("Reflection disabled"));
 
-        String projectRoot = tempDir.toAbsolutePath().toString();
+    String projectRoot = tempDir.toAbsolutePath().toString();
 
-        BootstrapOptions options = BootstrapOptions.defaultOptions()
+    BootstrapOptions options =
+        BootstrapOptions.defaultOptions()
             .withProjectRoot(projectRoot)
             .withModelGateway(mockModel)
-            .withOverrideConfig(new JsonObject().put("webui", new JsonObject().put("enabled", false)));
+            .withOverrideConfig(
+                new JsonObject().put("webui", new JsonObject().put("enabled", false)));
 
-        CodingAgentBuilder.bootstrap(vertx, options)
-            .onComplete(testContext.succeeding((Ganglia g) -> {
-                this.ganglia = g;
-                testContext.completeNow();
-            }));
-    }
+    CodingAgentBuilder.bootstrap(vertx, options)
+        .onComplete(
+            testContext.succeeding(
+                (Ganglia g) -> {
+                  this.ganglia = g;
+                  testContext.completeNow();
+                }));
+  }
 
-    @Test
-    void testCompleteWorkflow(Vertx vertx, VertxTestContext testContext) {
-        ToolCall call = new ToolCall("c1", "list_directory", Map.of("path", "."));
+  @Test
+  void testCompleteWorkflow(Vertx vertx, VertxTestContext testContext) {
+    ToolCall call = new ToolCall("c1", "list_directory", Map.of("path", "."));
 
-        when(mockModel.chatStream(any(ChatRequest.class), any()))
-            .thenReturn(Future.succeededFuture(new ModelResponse("I will list files.", List.of(call), new TokenUsage(1, 1))))
-            .thenReturn(Future.succeededFuture(new ModelResponse("Workflow complete.", Collections.emptyList(), new TokenUsage(1, 1))));
+    when(mockModel.chatStream(any(ChatRequest.class), any()))
+        .thenReturn(
+            Future.succeededFuture(
+                new ModelResponse("I will list files.", List.of(call), new TokenUsage(1, 1))))
+        .thenReturn(
+            Future.succeededFuture(
+                new ModelResponse(
+                    "Workflow complete.", Collections.emptyList(), new TokenUsage(1, 1))));
 
-        SessionContext context = ganglia.sessionManager().createSession(UUID.randomUUID().toString());
+    SessionContext context = ganglia.sessionManager().createSession(UUID.randomUUID().toString());
 
-        ganglia.agentLoop().run("Run complete workflow", context)
-            .onComplete(testContext.succeeding(result -> {
-                testContext.verify(() -> {
-                    assertTrue(result.contains("complete"));
-                    testContext.completeNow();
-                });
-            }));
-    }
+    ganglia
+        .agentLoop()
+        .run("Run complete workflow", context)
+        .onComplete(
+            testContext.succeeding(
+                result -> {
+                  testContext.verify(
+                      () -> {
+                        assertTrue(result.contains("complete"));
+                        testContext.completeNow();
+                      });
+                }));
+  }
 }
