@@ -3,44 +3,42 @@ package work.ganglia.it.harness;
 import io.vertx.core.Vertx;
 import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
-import work.ganglia.port.external.llm.ModelResponse;
-import work.ganglia.port.internal.state.TokenUsage;
+import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-
-import java.util.Collections;
-import java.util.List;
+import work.ganglia.port.external.llm.ModelResponse;
+import work.ganglia.port.internal.state.TokenUsage;
 
 @ExtendWith(VertxExtension.class)
 public class E2EHarnessTest {
 
-    private E2ETestHarness harness;
+  private E2ETestHarness harness;
 
-    @BeforeEach
-    void setUp(Vertx vertx, VertxTestContext testContext) {
-        harness = new E2ETestHarness(vertx);
-        harness.setup().onComplete(testContext.succeedingThenComplete());
-    }
+  @BeforeEach
+  void setUp(Vertx vertx, VertxTestContext testContext) {
+    harness = new E2ETestHarness(vertx);
+    harness.setup().onComplete(testContext.succeedingThenComplete());
+  }
 
-    @Test
-    void testBasicScenario(Vertx vertx, VertxTestContext testContext) {
-        TestScenario scenario = new TestScenario(
+  @Test
+  void testBasicScenario(Vertx vertx, VertxTestContext testContext) {
+    TestScenario scenario =
+        new TestScenario(
             "hello",
             "Basic Hello",
             "Hello",
-            List.of(
-                new ModelResponse("Hi there!", Collections.emptyList(), new TokenUsage(1, 1))
-            ),
+            List.of(new ModelResponse("Hi there!", Collections.emptyList(), new TokenUsage(1, 1))),
             Collections.emptyList(),
-            List.of(
-                new TestScenario.Expectation("OUTPUT_CONTAINS", "Hi there!")
-            )
-        );
+            List.of(new TestScenario.Expectation("OUTPUT_CONTAINS", "Hi there!")));
 
-        harness.runScenario(scenario)
-            .onComplete(testContext.succeeding(result -> {
-                testContext.completeNow();
-            }));
-    }
+    harness
+        .runScenario(scenario)
+        .onComplete(
+            testContext.succeeding(
+                result -> {
+                  testContext.completeNow();
+                }));
+  }
 }
